docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
.listing {
  position: relative;

  .mls-number {
    font-size: .75em;
    margin: $spacing_default 0;
  }

  .listing-title {
    font-size: $font_size_base;
    font-weight: bold;
    padding: .5 * $spacing_default 0;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    text-transform: uppercase;
  }

  .list-price {
    font-size: $font_size_title;
    display: block;
    position: relative;
    padding: $spacing_default;
    margin-bottom: -1 * ($font_size_title + ($spacing_default));
    top: -1 * ($font_size_title + ($spacing_default));
    @include background-image(linear-gradient(left, rgba(white,0) 0%,rgba(white,0) 33%,rgba(white,0.75) 66%,rgba(white,0.75) 100%));
    text-align: right;
    font-weight: bold;
  }

  #listing-map-wrapper {
    height: 300px;
    padding: $spacing_default;
    margin: $spacing_default;
    background: white;
    border: 1px solid $color_gray;
    position: relative;
    @include border-radius();

    img {
      max-width: none;
    }

    #listing-map {
      min-height: 100%;
      background: url("../images/loading.gif") center center no-repeat;
      background-size: 50%;
      background-color: $color_gray_light;

      &.no-map {
        background: url("../images/no-map.jpg") center center no-repeat;
        background-size: 100%;
        background-clip: content-box;
      }
    }
  }

  .more-info{
    display: block;

    a {
      margin-top: $spacing_default;
      width: 100%;
      text-align: center;
      @include sassy-button("matte", 10px, .75 * $font_size_base, $color_green, $color_green_light);
    }
  }

  .group_statistics,
  .group_location_details {
    padding: $spacing_default;
    margin: $spacing_default;
    background: white;
    border: 1px solid $color_gray;
    position: relative;
    @include border-radius();

    .stats-wrapper,
    .detail-wrapper {
      padding-bottom: $spacing_default;
      margin-bottom: $spacing_default;
      border-bottom: 1px dotted $color_gray;

      .label-inline {
        color: darken($color_gold, 10%);
        font-weight: bold;
        width: 50%;
        margin-right: 1%;
        text-align: right;
      }
      .stat,
      .detail {
        display: inline-block;
        text-transform: capitalize;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        width: 49%;

        a {
          color: $color_gray_dark;
          text-decoration: underline;
        }
        a:hover {
          color: $color_green;
        }
      }
    }

    & div:last-child {
      border-bottom: none;
      margin-bottom: 0;
      padding-bottom: 0;
    }
  }
  .group_statistics {
    margin-top: 5 * $spacing_default;
  }

  .description {
    margin: $spacing_default 0 (4 * $spacing_default) 0;
  }

  .links {
    &.inline {
      position: absolute;
      top: -2.25em;
      left: 0;

      li {
        display: inline-block;
        margin: 0;

        a {
          display: inline-block;
          padding: .5 * $spacing_default;
          color: $color_green;
        }


          &.c21_virtual_tour_link {
            background: url(../images/icon-360.png) no-repeat 4px center;
            background-size: contain;
            padding-left: 24px;
          }
          &.print_html {
            background: url(../images/icon-print.png) no-repeat 4px center;
            background-size: contain;
            padding-left: 24px;
          }
          &.print_pdf {
            background: url(../images/icon-pdf.png) no-repeat 4px center;
            background-size: contain;
            padding-left: 24px;
          }

        @include breakpoint($bp800 $bp900) {
          &.print_pdf {
            background: none;
            padding-left: 0px;
          }
        }
      }

      @include breakpoint($bp500 $bp800) {
        width: 150%;
      }
      @include breakpoint($bp800) {
        right: 0;
        left: auto;
      }
    }
  }

  .agents {
    margin: 2 * $spacing_default 0;

    .agent {
      background: white;
      border: 1px solid $color_gray;
      border-left: 5px solid $color_gold;
      padding: $spacing_default;
      margin: $spacing_default 0;

      .headshot {
        @include float-span(2, 'first');
        margin: 0 $spacing_default 0 0;
      }
      .phone-number,
      .email {
        white-space: nowrap;
        display: block;
        margin-bottom: $spacing_default;
      }
    }
    .agents-title {
      font-weight: bold;
      font-size: $font_size_base;
    }
  }

  .photo-wrap {
    position: relative;
  }

  .sale-pending-flag {
    width: 110px;
    height: 120px;
    overflow: hidden;
    position: absolute;
    top: -3px;
    left: -3px;

    .sale-pending-text{
      display: block;
      font: bold 15px Sans-Serif;
      color: #333;
      text-align: center;
      @include text-shadow(rgba(darken($color_gray_dark, 25%), .5) 0 1px 0);
      @include rotate(-45deg);
      position: relative;
      padding: 7px 0;
      left: -35px;
      top: 27px;
      width: 155px;
      background-color: $color_red;
      color: white;
      @include box-shadow(0 0 3px rgba($color_gray_dark, .3));

      &::before,
      &::after {
        content: "";
        border-top:   3px solid darken($color_red, 25%);
        border-left:  3px solid transparent;
        border-right: 3px solid transparent;
        position:absolute;
        bottom: -3px;
      }
      &::before {
        left: 0;
      }
      &::after {
        right: 0;
      }
    }

  }

  @include breakpoint($bp500) {
    .group_statistics {
      margin: $spacing_default 0;
      @include float-span(3);
    }
    .group_location_details {
      margin: $spacing_default 0;
      @include float-span(3, 'last');
    }
    #listing-map-wrapper {
      @include float-span(3);
      height: 225px;
    }
    .agents {
      @include float-span(3, 'last');
    }
  }
  @include breakpoint($bp650) {
    .list-price {
      clear: both;
      @include background-image(linear-gradient(left, rgba(white,0.75) 0%,rgba(white,0.75) 33%,rgba(white,0) 66%,rgba(white,0) 100%));
      text-align: left;
    }
    .more-info {
      a {
        @include sassy-button("matte", 10px, $font_size_base, $color_green, $color_green_light);
      }
    }
  }
  @include breakpoint($bp800) {
    .group-listing-details {
      @include float-span(4);
    }
    .group-listing-statistics {
      @include float-span(2, 'last');
    }
    .group-listing-location-details {
      @include float-span(2, 'last');
    }
    .listing-office {
      @include float-span(2, 'last');
    }
    #listing-map-wrapper {
      @include float-span(2, 'last');
    }
    .agents {
      @include float-span(2, 'last');
      .agent {
        .agents-title {
          font-weight: bold;
          font-size: .7 * $font_size_base;
        }
      }
    }

  }

}

.view-page-listing-teasers {
  @include breakpoint($bp800) {
    margin: 0 0 0 2em;
    @include clearfix();

    .pager {
      clear: both;
    }
  }

  @include breakpoint($bp1075) {
    .views-row {
      clear: none;
    }
  }
}

